--- a/composer.json
+++ b/composer.json
@@ -70,6 +70,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "friendsofphp/php-cs-fixer": "^3.5",
         "symfony/maker-bundle": "^1.36",
         "symfony/stopwatch": "6.0.*",
         "symfony/web-profiler-bundle": "6.0.*"
