--- a/composer.json
+++ b/composer.json
@@ -71,6 +71,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "fakerphp/faker": "^1.19",
         "friendsofphp/php-cs-fixer": "^3.5",
         "symfony/maker-bundle": "^1.36",
         "symfony/stopwatch": "6.0.*",
