chore: add makefile

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
         "easycorp/easyadmin-bundle": "^2.3",
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
@@ -14,6 +15,7 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/maker-bundle": "^1.13",
         "symfony/web-server-bundle": "4.4.*"
     },
